# tree-sitter-tl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tl.h  tree-sitter-tl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTLTests/: TreeSitterTLTests.swift
examples/: example.tl
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: types.txt
